# serialization

./: .gitignore  CMakeLists.txt  readme.md
include/serialization/: serializer.hpp  types.hpp
include/serialization/v1.0/: common.hpp  service_1.hpp  service_2.hpp
include/serialization/v2.0/: common.hpp
src/: CMakeLists.txt
src/v1.0/: common.cpp  service_1.cpp  service_2.cpp
test/: CMakeLists.txt  test_main.cpp
test/v1.0/: test_common.cpp  test_service_1.cpp  test_service_2.cpp
